# strawberry-graphql-permission-extension

./: README.md  pyproject.toml
strawberry_graphql_permission_extension/extensions/: __init__.py  base_extension.py  has_permission_to_create.py  has_permission_to_interact.py
strawberry_graphql_permission_extension/utils/: __init__.py  check_obj_permissions.py  enums.py  get_global_id_objects_from_kwargs.py  has_permission_to_create_object.py  roles.py
